--- a/ref.bib
+++ b/ref.bib
@@ -48,6 +48,20 @@ mendeley-tags = {Bike Insurance},
 title = {Insurance Data},
 year = {2017}
 }
+@book{grevskott_2011, 
+place={Oslo, Norway}, 
+title={Quantitative requirements for non-life insurance under Solvency 2},
+publisher={SAS Institute Inc, USA},
+author={Grevskott, Sverre},
+year={2011},
+pages={2-8}
+}
+@book{witten2016data,
+title={Data Mining: Practical machine learning tools and techniques},
+author={Witten, Ian H and Frank, Eibe and Hall, Mark A and Pal, Christopher J},
+year={2016},
+publisher={Morgan Kaufmann}
+}
 
 %url = {http://nepalinsurance.com.np/},
 
